# neu-compass

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
api/: dependencies.py  exceptions.py  logging.py  main.py  models.py
app/: api_client.py  auth.py  cookie_session.py  coop_view.py  discover_view.py  eval_dashboard.py  program_view.py  session_tokens.py  state_manager.py  streamlit_app.py  streamlit_auth_ui.py  ui_theme.py
config/: settings.py
data/: acronym_glossary.json  slang_dict.json
db/: __init__.py  alias_repository.py  connection.py  coop_repository.py  init.sql  program_repository.py  query_log_repository.py  repository.py  user_repository.py
docs/: PLAN_v1.3.md  PLAN_v2.0.md  PLAN_v2.1.md  PLAN_v2.2.md  PLAN_v2.3.md  PLAN_v2_3_1.md  PLAN_v3.0.md  annotation_guide.md  api_contract.md  cloudflare_tunnel.md  oauth_secret_rotation.md  optimization_2026_06.md  path_decision.md  perf_week9_results.md  pii_redaction.md  portfolio_metrics.md  postmortem_week7.md  rag_smoke_results.md  roadmap_v3.md  streamlit_ws_troubleshooting.md  system_architecture.md  tensorrt_runbook.md  v3_1_rag_quality.md  wsl2_setup.md
eval/: __init__.py  api_eval_pool10_fp16.json  api_eval_pool10_int8.json  api_eval_pool10_int8_calibrated.json  api_eval_pool20_fp16.json  api_eval_v031_slim_mixed.json  api_eval_v03_baseline.json  api_eval_v03_convex.json  api_eval_v03_docexp.json  api_eval_v03_docexp_gate_v5.json  api_eval_v03_final.json  api_eval_v03_gate_v4.json  api_eval_v03_hyde_rescue.json  api_eval_v041_final_adr0028.json  api_eval_v041_post_adr0028.json  api_eval_v041_post_sweep.json  api_eval_v041_postdeploy_sprint2.json  api_eval_v04_baseline.json  blend_sweep_results.json  compare_prompts.py  ragas_runner.py  reject_threshold_sweep.json  rejection_calibration.json  rejection_smoke.json  rejection_smoke_T0.05.json  run_eval.py  sweep_blend_alpha.py  sweep_reject_threshold.py  test_set.json  test_set_v03.json  test_set_v031.json  test_set_v04.json
llm/: __init__.py  alias_detector.py  formatter.py  gemini_client.py  query_filter_extractor.py  review_enrichment.py
rag/: __init__.py  acronyms.py  embedder.py  followup.py  hybrid.py  hyde.py  index.py  onnx_backend.py  openvino_backend.py  prereq_graph.py  query_normalizer.py  rejection.py  reranker.py  retriever.py
schemas/: __init__.py  alias.py  coop.py  course.py  program.py  query_filter.py  user.py
scrapers/: __init__.py  _base.py  neu_catalog.py  reddit.py  rmp.py  syllabus.py
scripts/: apply_doc_expansion.py  augment_test_set_mixed.py  backfill_prereq_edges.py  backup.sh  (+42 more)
(+106 files in other folders)
