[project]
name = "neu-compass"
version = "0.1.0"
description = "Course RAG + Co-op MVP for NEU graduate students"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # === Core framework ===
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "streamlit>=1.31",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # === RAG ===
    "faiss-cpu>=1.8",  # 切换到 faiss-gpu 看团队 GPU 情况
    "FlagEmbedding>=1.2",  # bge-m3 官方
    "rank-bm25>=0.2.2",
    # === LLM ===
    "google-genai>=1.0",  # Week 8 §3.5: migrated from google-generativeai (EOL)
    # === Data ingestion ===
    "httpx>=0.27",
    "playwright>=1.42",
    "praw>=7.7",  # Reddit official API
    "pymupdf>=1.24",  # PDF 解析
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    # === Storage ===
    # SQLite 走标准库,无需声明
    # === Auth ===
    "authlib>=1.3",
    "itsdangerous>=2.1",  # session signing
    # === Observability ===
    "structlog>=24.1",
    # === Eval ===
    "ragas>=0.1.5",
    "deepeval>=0.21",
    # === Utils ===
    "python-multipart>=0.0.9",
    "tenacity>=8.2",  # retry decorator
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 注意: 'eval/' 不进 wheel,避免 shadow Python 内建 eval()。
# 该目录里的脚本走 `python eval/run_eval.py` 直接执行,不做 module import。
packages = ["config", "schemas", "scrapers", "llm", "rag", "api", "app"]

# === Ruff ===
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# === Mypy ===
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # 让 `import schemas` 在未 pip install -e . 时也可工作
asyncio_mode = "auto"
# `-m "not live"` skips network-touching tests by default. Opt in with
# `pytest -m live` (e.g. for nightly real-traffic verification).
addopts = "-ra --strict-markers -m 'not live'"
markers = [
    "live: hits real network (NEU catalog / RMP GraphQL / Reddit). Opt-in via `pytest -m live`.",
]
